# tbank_logo_detector

./: .gitignore  README.md  README_ls_setup.md  fiftyone_similar_detections.py  fix_coco_paths.py  main.py  prepare_data_for_colab.py  pyproject.toml  run_synthesis_pipeline.bat  run_synthesis_pipeline.sh  sample_test_set.py
data/tbank_official_logos/: label_studio_annotations.json  label_studio_annotations.label_config.xml  refs_ls_coco.json
data/yoloe_results/: pseudo_coco.json
data_preparation/yoloe/: Dockerfile  README.md  config.json  extract_background_objects.py  extract_tbank_crops.py  garbage.md  notebook.py  pyproject.toml  tbank_yoloe_bulk_inference.py  text_prompt_detection.py  ultralytics_dockerfile
data_preparation/yoloe/colab_package/: README.md  export_coco.py  main.py  paths.py  prepare_data.py  save_results.py  yolo_predict.py
data_preparation/yoloe/yoloe_package/: README.md  __init__.py  config.py  directories.py  export_coco.py  paths.py  pipeline.py  prepare_data.py  save_results.py  yolo_predict.py
docs/: 1.project_development_stages.md  2.enviroment.md  3.data_preparation.md  3.data_preparation_plan.md  3.data_preparation_scripts.md  4.model_train.md  5.service.md  accelerated_baseline_plan.md  fast_solution.md  final_workflow.md  label_studio.md  label_studio_fiftyone_pipeline.md  labeling_strategy.md  synthetic_data_generator_plan.md  task.md  tbank_official_logos.md  yoloe_9logos_pipeline_plan.md  yoloe_analysis.md
notebooks/: yoloe_colab_labeling.ipynb
service/: README.md  future_architecture_plan.md  src_structure.md
(+42 files in other folders)
