[project]
name = "yoloe_package"
version = "0.1.0"
description = "YOLOE for T-Bank logo detection"
dependencies = [
    "ultralytics",
    "torch",
    "torchvision",
    "pillow",
    "numpy",
    "opencv-python",
    "pycocotools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yoloe_package"]